# simreple

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: CompileOptions.cmake  ExternalAntlr4Cpp.cmake  FindAntlr4C3.cmake  FindAntlr4Cpp.cmake  FindReplxx.cmake
source/: CMakeLists.txt
source/simreple/: Machine.cpp  Machine.hpp  Main.cpp  Shell.cpp  Shell.hpp  SuggestionService.cpp  SuggestionService.hpp  SyntaxHighlighting.cpp  SyntaxHighlighting.hpp
source/simreple/antlr/: SimpLa.g4
